Performed Vectorized backtesting on SMA Crossover, reaping 200%+ strategy returns over 23 year period

--- a/DynamicForexTrader.ipynb
+++ b/DynamicForexTrader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -24,14 +24,14 @@
      "text": [
       "--------------------------------------------------\n",
       "ATTEMPTING TO MERGE...\n",
-      "REQUIRE UNDER 60 SECONDS\n",
-      "Seconds: 33\n",
+      "REQUIRE UNDER 30 SECONDS\n",
+      "Seconds: 11\n",
       "SUCCESSFULLY MERGED\n",
       "--------------------------------------------------\n",
       "1\n",
       "--------------------------------------------------\n",
-      "2023-08-18T14:55:34.099544858Z | GOING SHORT\n",
-      "2023-08-18T14:55:34.099544858Z | Units = -100000.0 | Price = 1.08692 | P&L = 0.0 | Cumulative P&L = 0.0\n",
+      "2023-08-18T15:11:12.133295440Z | GOING SHORT\n",
+      "2023-08-18T15:11:12.133295440Z | Units = -1000.0 | Price = 1.08749 | P&L = 0.0 | Cumulative P&L = 0.0\n",
       "--------------------------------------------------\n",
       "\n",
       "STAYING SHORT\n",
@@ -43,10 +43,20 @@
       "STAYING SHORT\n",
       "STAYING SHORT\n",
       "STAYING SHORT\n",
-      "640\n",
+      "STAYING SHORT\n",
+      "STAYING SHORT\n",
+      "STAYING SHORT\n",
+      "STAYING SHORT\n",
+      "STAYING SHORT\n",
+      "STAYING SHORT\n",
+      "STAYING SHORT\n",
+      "STAYING SHORT\n",
+      "STAYING SHORT\n",
+      "STAYING SHORT\n",
+      "544\n",
       "--------------------------------------------------\n",
-      "2023-08-18T15:05:30.503996186Z | GOING NEUTRAL\n",
-      "2023-08-18T15:05:30.503996186Z | Units = 100000.0 | Price = 1.08726 | P&L = -18.7492 | Cumulative P&L = -18.7492\n",
+      "2023-08-18T15:21:07.266608994Z | GOING NEUTRAL\n",
+      "2023-08-18T15:21:07.266608994Z | Units = 1000.0 | Price = 1.08803 | P&L = -1.5116 | Cumulative P&L = -1.5116\n",
       "--------------------------------------------------\n",
       "\n",
       "\n",
