Added missing information to VectorizedBacktester notebook

--- a/vectorized_backtesting/VectorizedBacktester.ipynb
+++ b/vectorized_backtesting/VectorizedBacktester.ipynb
@@ -327,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the RSI graph, we can see that standard buy/hold and RSI returns shift their dominance over the years. "
+    "In the RSI graph, we can see that standard buy/hold and RSI returns shift their dominance over the years. Thus, this momentum indicator is not a reliable strategy to trade on, and should be combined with other strategies to increase performance and profitability."
    ]
   }
  ],
